...
      onTap: () {
        if (article.sourceUrl.isNotEmpty) {
          Navigator.push(
              context,
              MaterialPageRoute(
                builder: (context) => ArticleDetailPage(
                  key: Key("articleDetail"),
                  articleUrl: article.sourceUrl,
                  articleTitle: article.title,
                ),
              ));
        } else {
          ScaffoldMessenger.of(context)
...
